--- a/resnet.ipynb
+++ b/resnet.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
-  
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "25540f93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\Arpita\\anaconda3\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np \n",
     "import pandas as pd \n",
@@ -20,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "04e66eb2",
+   "id": "5c481729",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "162411c9",
+   "id": "84e6c52a",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2c26048c",
+   "id": "75c3e042",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ae9311d6",
+   "id": "c110a1b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eec3ebfb",
+   "id": "2ef69bd1",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f9de9dda",
+   "id": "d6508d18",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "553bd880",
+   "id": "f72a7ca3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,18 +296,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "086afc92",
+   "execution_count": 14,
+   "id": "47682418",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted Traffic Sign: Classification error: [Errno 2] No such file or directory: '00034.png'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define a function to classify a traffic sign\n",
     "def classify_traffic_sign(image_path):\n",
@@ -311,17 +317,12 @@
     "        return sign\n",
     "    except Exception as e:\n",
     "        return f\"Classification error: {str(e)}\"\n",
-    "\n",
-    "# Call the function to classify the image\n",
-    "image_path = '00034.png'\n",
-    "result = classify_traffic_sign(image_path)\n",
-    "print(f'Predicted Traffic Sign: {result}')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "b1335e57-7336-4202-afcd-1c15db3a3dab",
    "metadata": {},
    "outputs": [
@@ -329,7 +330,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 55ms/step\n"
+      "1/1 [==============================] - 0s 39ms/step\n"
      ]
     },
     {
@@ -359,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "7807faee-fc8a-453b-9f63-0211f987ad2a",
    "metadata": {},
    "outputs": [
@@ -367,7 +368,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 39ms/step\n"
+      "1/1 [==============================] - 0s 47ms/step\n"
      ]
     },
     {
@@ -397,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "d10d522b-6efb-423c-82ed-1613490d9977",
    "metadata": {},
    "outputs": [
@@ -405,7 +406,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 39ms/step\n"
+      "1/1 [==============================] - 0s 58ms/step\n"
      ]
     },
     {
@@ -435,8 +436,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "de881649",
+   "execution_count": 18,
+   "id": "50f135da",
    "metadata": {},
    "outputs": [
     {
@@ -486,105 +487,6 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "a180a1d7-22dc-419f-8abe-c52e48445173",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import tensorflow as tf\n",
-    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
-    "\n",
-    "class MetricsCallback(tf.keras.callbacks.Callback):\n",
-    "    def on_train_begin(self, logs=None):\n",
-    "        self.val_precision = []\n",
-    "        self.val_recall = []\n",
-    "        self.val_f1 = []\n",
-    "\n",
-    "    def on_epoch_end(self, epoch, logs=None):\n",
-    "        val_predict = np.argmax(self.model.predict(self.validation_data[0]), axis=1)\n",
-    "        val_targ = np.argmax(self.validation_data[1], axis=1)\n",
-    "        \n",
-    "        _val_precision = precision_score(val_targ, val_predict, average='weighted')\n",
-    "        _val_recall = recall_score(val_targ, val_predict, average='weighted')\n",
-    "        _val_f1 = f1_score(val_targ, val_predict, average='weighted')\n",
-    "        \n",
-    "        self.val_precision.append(_val_precision)\n",
-    "        self.val_recall.append(_val_recall)\n",
-    "        self.val_f1.append(_val_f1)\n",
-    "        \n",
-    "        print(f'Epoch {epoch+1} - val_precision: {_val_precision:.4f} - val_recall: {_val_recall:.4f} - val_f1: {_val_f1:.4f}')\n",
-    "        return\n",
-    "\n",
-    "metrics_callback = MetricsCallback()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "id": "43992222-ebfb-451b-a199-b968dce08b92",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Metrics at Specific Thresholds:\n",
-      "   Threshold  Precision    Recall  F1 Score\n",
-      "0        0.2   0.666667  1.000000       0.8\n",
-      "1        0.5   1.000000  1.000000       1.0\n",
-      "2        0.7   1.000000  0.666667       0.8\n",
-      "\n",
-      "Metrics at Threshold 0.5:\n",
-      "Precision: 1.00\n",
-      "Recall: 1.00\n",
-      "F1 Score: 1.00\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "from sklearn.metrics import precision_recall_curve, f1_score, precision_score, recall_score\n",
-    "\n",
-    "# Example true labels and predicted probabilities\n",
-    "y_true = [0, 1, 1, 0, 1, 0, 1, 0, 1, 1]\n",
-    "y_scores = [0.2, 0.8, 0.6, 0.3, 0.7, 0.1, 0.9, 0.4, 0.65, 0.85]\n",
-    "\n",
-    "# Calculate precision and recall\n",
-    "precision, recall, thresholds = precision_recall_curve(y_true, y_scores)\n",
-    "\n",
-    "# Calculate precision, recall, and F1 score at specific thresholds\n",
-    "thresholds_to_analyze = [0.2, 0.5, 0.7]\n",
-    "precision_at_thresholds = [precision_score(y_true, [1 if score >= th else 0 for score in y_scores]) for th in thresholds_to_analyze]\n",
-    "recall_at_thresholds = [recall_score(y_true, [1 if score >= th else 0 for score in y_scores]) for th in thresholds_to_analyze]\n",
-    "f1_at_thresholds = [f1_score(y_true, [1 if score >= th else 0 for score in y_scores]) for th in thresholds_to_analyze]\n",
-    "\n",
-    "# Create a DataFrame to display the results\n",
-    "results_df = pd.DataFrame({\n",
-    "    'Threshold': thresholds_to_analyze,\n",
-    "    'Precision': precision_at_thresholds,\n",
-    "    'Recall': recall_at_thresholds,\n",
-    "    'F1 Score': f1_at_thresholds\n",
-    "})\n",
-    "\n",
-    "# Display the table\n",
-    "print(\"Metrics at Specific Thresholds:\")\n",
-    "print(results_df)\n",
-    "\n",
-    "# Provide a specific threshold value example (e.g., 0.5)\n",
-    "specific_threshold = 0.5\n",
-    "specific_precision = precision_score(y_true, [1 if score >= specific_threshold else 0 for score in y_scores])\n",
-    "specific_recall = recall_score(y_true, [1 if score >= specific_threshold else 0 for score in y_scores])\n",
-    "specific_f1 = f1_score(y_true, [1 if score >= specific_threshold else 0 for score in y_scores])\n",
-    "\n",
-    "print(f\"\\nMetrics at Threshold {specific_threshold}:\")\n",
-    "print(f\"Precision: {specific_precision:.2f}\")\n",
-    "print(f\"Recall: {specific_recall:.2f}\")\n",
-    "print(f\"F1 Score: {specific_f1:.2f}\")\n"
    ]
   },
   {
